feat(app): Se generan cambio a la variante Master and Slave

--- a/css/final.css
+++ b/css/final.css
@@ -217,6 +217,17 @@ section {
     }
 }
 
+.mask{
+    position: relative;
+}
+
+.mask::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
 
 .carousel__viewBox--3d {
     perspective: 1200px;
