--- a/css/final.css
+++ b/css/final.css
@@ -163,7 +163,7 @@ section {
     gap: 24px;
     width: 100%;
     flex-flow: row nowrap;
-    scroll-snap-type: x mandatory;
+    /*scroll-snap-type: x mandatory;*/
     @media (min-width: 1280px) {
         overflow: initial;
         scroll-snap-type: none;
@@ -174,6 +174,7 @@ section {
     flex-direction: column;
     gap: 0px;
     height: 100%;
+    white-space: nowrap;
 }
 
 
@@ -212,6 +213,8 @@ section {
     width: 100%;
     height: 100%;
     font-size: 2rem;
+    transition: transform 0.5s ease-in-out;
+    will-change: transform;
 }
 
 
@@ -312,4 +315,8 @@ section {
     position: absolute;
     opacity: .5;
     cursor: pointer;
+}
+
+.visible {
+   color:rebeccapurple;
 }
